# ziv_drift_reproduction

./: .gitignore  README.md  final_report.md  main.py  pyproject.toml
outputs/reports/: figure2b_exact_mouse53_pm_blockA_diagnostics.txt  figure2c_exact_mouse53_pm_blockA_diagnostics.txt  figure2e_pm_only_diagnostics.txt  figure2h_pm_only_diagnostics.txt
outputs/tables/: figure2b_exact_mouse53_pm_blockA_matrix.csv  figure2b_exact_mouse53_pm_blockA_plot_matrix.csv  figure2c_exact_mouse53_pm_blockA_lag_means.csv  figure2c_exact_mouse53_pm_blockA_raw_points.csv  figure2e_pm_only_mouse_by_lag.csv  figure2e_pm_only_summary_by_lag.csv  figure2e_pm_only_valid_mice.csv  figure2h_pm_only_mouse_by_lag.csv  figure2h_pm_only_summary_by_lag.csv  figure2h_pm_only_valid_mice.csv
src/analysis/: figure2b_exact_mouse53_pm_blockA.py  reproduce_figure2c_exact.py  reproduce_figure2e_pm_only.py  reproduce_figure2h_pm_only.py
src/utils/: logger.py
tests/: test_final_artifacts.py
